# rsp

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/assignment1_msgs/include/assignment1_msgs/msg/: odd_no.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/assignment1_msgs/include/assignment1_msgs/srv/: average.h
install/assignment1_msgs/share/assignment1_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/assignment1_msgs/share/assignment1_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  assignment1_msgs__rosidl_generator_cExport-noconfig.cmake  assignment1_msgs__rosidl_generator_cExport.cmake  assignment1_msgs__rosidl_generator_cppExport.cmake  assignment1_msgs__rosidl_typesupport_cExport.cmake  assignment1_msgs__rosidl_typesupport_cppExport-noconfig.cmake  assignment1_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/assignment1_msgs/share/assignment1_msgs/msg/: OddNo.idl
install/assignment1_msgs/share/assignment1_msgs/srv/: Average.idl  Average_Request.msg
install/assignment1_srvcli/include/assignment1_srvcli/: client.hpp
install/assignment1_srvcli/lib/assignment1_srvcli/: cli  srv
install/assignment1_srvcli/share/assignment1_srvcli/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/assignment1_srvcli/share/assignment1_srvcli/cmake/: assignment1_srvcliConfig.cmake
install/assignment1_subpub/include/assignment1_subpub/: subscriber.hpp
install/assignment1_subpub/lib/assignment1_subpub/: pub  sub
install/assignment1_subpub/share/assignment1_subpub/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/assignment1_subpub/share/assignment1_subpub/cmake/: assignment1_subpubConfig.cmake
install/edumip_description/share/edumip_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/edumip_description/share/edumip_description/launch/: edumip_startup.launch.py
install/edumip_description/share/edumip_description/meshes/: HC-SR04.dae
install/edumip_description/share/edumip_description/rviz/: config.rviz
install/edumip_description/share/edumip_description/urdf/: edumip.urdf.xacro  edumip.xacro
install/edumip_gazebo/share/edumip_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gripper_description/share/gripper_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pnp_actionlib/include/pnp_actionlib/: gripper_action.hpp  pnp_action.hpp  robot_action.hpp
install/pnp_actionlib/lib/pnp_actionlib/: client  server
install/pnp_actionlib/share/pnp_actionlib/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pnp_msgs/share/pnp_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_description/share/robot_description/: package.sh
install/robot_gripper/share/robot_gripper/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtles/lib/turtles/: broadcaster
install/turtles/share/turtles/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
rrohan2/01/assignment1_msgs/: CMakeLists.txt
rrohan2/01/assignment1_srvcli/: CMakeLists.txt
rrohan2/01/assignment1_srvcli/include/assignment1_srvcli/: server.hpp
rrohan2/01/assignment1_srvcli/src/: client.cpp  client_node.cpp  server.cpp  server_node.cpp
rrohan2/01/assignment1_subpub/: CMakeLists.txt  package.xml
rrohan2/01/assignment1_subpub/include/assignment1_subpub/: publisher.hpp
rrohan2/01/assignment1_subpub/src/: publisher.cpp  publisher_node.cpp  subscriber.cpp  subscriber_node.cpp
rrohan2/02/pnp_actionlib/: CMakeLists.txt
rrohan2/02/pnp_actionlib/src/: gripper_action.cpp  pnp_action.cpp  pnp_client.cpp  pnp_server.cpp  robot_action.cpp
rrohan2/02/pnp_msgs/: CMakeLists.txt
rrohan2/02/pnp_msgs/action/: Gripper.action  PickAndPlace.action
rrohan2/03/turtles/: CMakeLists.txt
rrohan2/03/turtles/launch/: two_broadcasters.launch  two_turtles_broadcasters.launch
rrohan2/03/turtles/rviz/: rvizconfig.rviz
rrohan2/03/turtles/src/: broadcaster.cpp
rrohan2/04/gripper_description/: CMakeLists.txt
rrohan2/04/gripper_description/urdf/: gripper.urdf.xacro  gripper.xacro
rrohan2/04/robot_description/: CMakeLists.txt  package.xml
rrohan2/04/robot_description/launch/: robot_bringup.launch.py
rrohan2/04/robot_description/urdf/: robot.urdf  robot.urdf.xacro
rrohan2/04/robot_gripper/: CMakeLists.txt
rrohan2/05/edumip_description/: CMakeLists.txt  package.xml
rrohan2/05/edumip_description/launch/: edumip_startup.launch.py
rrohan2/05/edumip_description/urdf/: edumip.urdf.xacro  edumip.xacro  gazebo.xacro  hc_sr04.xacro
rrohan2/05/edumip_gazebo/: CMakeLists.txt
rrohan2/05/edumip_gazebo/launch/: edumip.launch.py
rrohan2/05/edumip_gazebo/rviz/: config.rviz
rrohan2/05/edumip_gazebo/worlds/: demo_world.world  my_world.world  tot.world
rrohan2/06/edumip_tot_plugin/: CMakeLists.txt  package.xml
rrohan2/06/edumip_tot_plugin/src/: tot.cpp
rrohan2/07/: README.md
rrohan2/07/rtt_ur_trajectory/: CMakeLists.txt  package.xml  rsp_hw.repos
rrohan2/07/rtt_ur_trajectory/include/rtt_ur_trajectory/: rtt_ur_traj.hpp
rrohan2/07/rtt_ur_trajectory/launch/: rtt_ur_traj.launch.py
rrohan2/07/rtt_ur_trajectory/rviz/: config.rviz
rrohan2/07/rtt_ur_trajectory/scripts/: rtt_ur_traj.ops
rrohan2/07/rtt_ur_trajectory/src/: rtt_ur_traj.cpp
rrohan2/rtt_ur_trajectory/: CMakeLists.txt  package.xml
(+70 files in other folders)
