<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_ur_trajectory</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rrohan2@jh.edu">ritwik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_toolchain</depend>
  <depend>kdl_typekit</depend>
  <depend>orocos_kdl</depend>

  <depend>rtt_ros2</depend>
  <depend>rtt_ros2_node</depend>
  <depend>rtt_ros2_params</depend>
  <depend>rtt_ros2_topics</depend>
  <depend>rtt_ros2_sensor_msgs</depend>
  <depend>rtt_ros2_services</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
